fix: force light color scheme ignore OS dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @tailwind base;
+
+html { color-scheme: light only !important; }
 @tailwind components;
 @tailwind utilities;
 
